--- a/notes/notes_20210724.md
+++ b/notes/notes_20210724.md
@@ -101,3 +101,41 @@ With the above variables, it might hypothetically be possible to jump forward in
 The following specification was given for the project:
 
 * Each solution to a given challenge # in elevatorsaga should be tagged as a release in your repo.  The hope is your solution can solve each challenge as one large program, not lots of smaller programs.
+
+Nothing within this statement says that we can't shoot for the most generalizeable solution possible early in the game and then continue to build on each challenge based upon the most case agnostic solution from there on out.
+
+### Playing with the IDE
+
+To ensure capability to extract variables from the IDE, the following code was created to attempt to print out, "pressed button," commands to console.
+
+```
+{
+    init: function(elevators, floors) {
+        var elevator = elevators[0]; // Let's use the first elevator
+
+        // Whenever the elevator is idle (has no more queued destinations) ...
+        elevator.on("idle", function() {            
+            // print out pressed floors
+            elevator.logpressedfloors();
+        });
+
+        elevator.logpressedfloors = function() {
+            // get the pressed floors
+            if(elevator.getPressedFloors().length > 0) {
+                // getPressedFloors returns an arr per github source
+                var pressedFloors = elevator.getPressedFloors()
+                console.log('pressedfloors:',pressedFloors)
+            }
+        }
+
+    },
+
+    update: function(dt, elevators, floors) {
+        // We normally don't need to do anything here
+    }
+}
+```
+
+![](/img/consolelog_pressedbuttonarray.png)
+
+![](/img/gamescreenshot_bushedbuttonsarray.png)
