--- a/notes/notes_20210724.md
+++ b/notes/notes_20210724.md
@@ -139,3 +139,45 @@ To ensure capability to extract variables from the IDE, the following code was c
 ![](/img/consolelog_pressedbuttonarray.png)
 
 ![](/img/gamescreenshot_bushedbuttonsarray.png)
+
+### General Solution Optimization Research
+
+Through a quick review of literature around elevator scheduling, it seems that there are at least two distinct schools of thought on the problem from a mathematical perspective:
+
+* Literal Elevator Scheduling (LES), improving how actual elevators operate in the physical world.
+* Hard Disk Arm Read Scheduling (HDARS), which involves a set of programming algorithms which in this world they call, "the elevator scheduling problem," which is similar to Literal Elevator Scheduling, but more idealized.
+
+Quick notes on the above:
+
+* Some blogs on LES refer to HDARS and vice versa.
+* LES seems to involve using HDARS in some cases but also may involve algorithms which might not typically be discussed in HDARS such as using Markov models to optimize decision making.
+* For the most part, Elevator Saga seems to model HDARS because the, "passengers," seem likely to spawn at any given floor at any time and get off at any floor at any time rather than in a physical world elevator in which passengers are more likely to have a highly utilized port on the ground level since people tend to leave buildings. In other words, there is a much higher probability field in a real world elevator than within Elevator Saga - which more approximates the world of reading data from rotating disks.
+* Also note that somewhat confusingly, one type of HDARS is also known as, "Elevator Scheduling," but it is also known as SCAN.
+
+#### Found Resources on Rotating Disk Algorithms
+
+* [Disks and I/O Scheduling](https://www.cs.unc.edu/~porter/courses/comp530/f20/slides/disk-scheduling.pdf)
+* [Wikipedia - Elevator Algorithm](https://en.wikipedia.org/wiki/Elevator_algorithm)
+* [Wikipedia - FIFO](https://en.wikipedia.org/wiki/FIFO_(computing_and_electronics)
+* [Wikipedia - FSCAN](https://en.wikipedia.org/wiki/FSCAN)
+* [Wikipedia - NStep-SCAN](https://en.wikipedia.org/wiki/N-Step-SCAN)
+* [Wikipedia - LOOK](https://en.wikipedia.org/wiki/LOOK_algorithm)
+
+##### Summary of Disks and I/O Scheduling Presentation PDF
+
+* Presentation suggests building a formula to optimize for latency.
+* First off, there is the FCFS algorithm - Assume a queue of requests exists to read/write tracks, follow that queue. This does not optimize for time.
+* SSTF or, "Greedy" scheduling suggests rearranging the queue by, "shortest time." So using a latency formula, minimuze total latency by rearranging the queue.
+* There are problems with SSTF/Greedy, in that, "farther away," requests starve for waiting time, and the disk head (or in our case, elevator) tends to hover toward the middle.
+* SCAN scheduling suggests just moving the head/elevator in one direction until all requests have
+been serviced, and then reverse. This particular algorithm is also known as, "Elevator Scheduling."
+* SCAN seems most efficient in general.
+* Circular SCAN (CSCAN): Move the head in one direction until an edge of the disk is reached, and then reset to the opposite edge.
+* C-SCAN offers better fairness at marginal cost, may be better under certain workloads.
+
+This presentation goes into:
+
+* Disk partitioning, and
+* Redundant Arrays of Inexpensive Disks (RAID) - which helps with throughput.
+
+RAID may be analogous to multiple elevators. We may return to optimization under these conditions later in the Elevator Saga.
