--- a/notes/notes_20210724.md
+++ b/notes/notes_20210724.md
@@ -124,7 +124,8 @@ To ensure capability to extract variables from the IDE, the following code was c
             if(elevator.getPressedFloors().length > 0) {
                 // getPressedFloors returns an arr per github source
                 var pressedFloors = elevator.getPressedFloors()
-                console.log('pressedfloors:',pressedFloors)
+                // print to console
+                console.log('pressedFloors:',pressedFloors)
             }
         }
 
@@ -181,3 +182,79 @@ This presentation goes into:
 * Redundant Arrays of Inexpensive Disks (RAID) - which helps with throughput.
 
 RAID may be analogous to multiple elevators. We may return to optimization under these conditions later in the Elevator Saga.
+
+### Psuedocode Draft Based Upon Basic Understanding of Standard Algorithms
+
+#### SCAN
+
+> ...moving the head/elevator in one direction until all requests have
+been serviced, then reverse...
+
+```
+
+{
+  init: function(elevators, floors) {
+
+    // by convention, start at floor 0 - BOTTOMFLOOR = 0
+
+    // pop top floor into, "schedule" destinationQueue and start elevator immediately, don't wait for lower floor passenger
+
+    // Find maximum number of floors, topFloor - NUMFLOORS / TOPFLOOR (for general solution)
+
+    // Estimate passenger quantity, or at least if there are any passengers with loadFactor > 0
+
+    // if there are passengers, proceed, if not idle() until allRequests has floor along path
+
+    // Check exterior requests prior to each passing_floor with floor_button_pressed - exteriorRequests
+
+    // Check continuously, interior requests: getPressedFloors - interiorRequests
+
+    // combine interiorRequests and exteriorRequests into allRequests, order allRequests sequentially relative to current position and SCAN direction
+
+    // update "schedule" destinationQueue based upon allRequests and currentFloor
+
+    // Move elevator toward topFloor -> goToFloor in topFloor direction
+
+    // At each floorNum reached, if currentFloor === one_of_the( allRequests ), reload passengers
+
+    // NOTE --- do not use, "stop" - this is used for a different purpose, not for stopping at floors
+
+    // Once reached TopFloor, insert bottom floor [0] into scheduling queue - destinationQueue.
+
+    // repeat the above pattern in reverse until reaching BOTTOMFLOOR
+
+    // Repeat pattern back to TOPFLOOR
+
+
+  }
+
+}
+
+```
+
+Note -
+
+* "exterior requests" (wall buttons) appear to be the array from floor_button_pressed
+* "interior requests" (elevator floor buttons) appear to be getPressedFloors
+* use going up / going down indicators to affect possible passenger behavior, "somehow" (per the documentation)
+
+The below variables were not used in the above pseudocode thus far:
+
+* maxPassengerCount - the actual capacity of the elevator
+* goingUpIndicator / goingDownIndicator
+* destinationDirection
+* stopped_at_floor
+* idle
+
+##### Possible Ideas to Improve Above Hypothetical Solution
+
+* Don't stop at exterior pushed floor unless equal to interior pushed floor if elevator is, "full," (which is an estimate based upon loadFactor)
+* Possibly wait for lower floor passenger if we find that there is ideed a bias toward that floor
+
+#### Further Documentation Notes
+
+We noticed in the documentation:
+
+> goingDownIndicator / goingUpIndicator - Gets or sets the going down/up indicator, which will affect passenger behavior when stopping at floors.
+
+This may indicate that request changes may adjust based upon elevator availability - e.g. the passengers may have some intelligence built-in which could help optimize for elevator throughput.
