--- a/notes/notes_20210724.md
+++ b/notes/notes_20210724.md
@@ -258,3 +258,15 @@ We noticed in the documentation:
 > goingDownIndicator / goingUpIndicator - Gets or sets the going down/up indicator, which will affect passenger behavior when stopping at floors.
 
 This may indicate that request changes may adjust based upon elevator availability - e.g. the passengers may have some intelligence built-in which could help optimize for elevator throughput.
+
+#### Source Code Notes
+
+There appears to be more functionality which can be found in the source code, not shown in the documentation:
+
+* [base.js](https://github.com/magwo/elevatorsaga/blob/master/base.js)
+
+* [floor.js](https://github.com/magwo/elevatorsaga/blob/master/floor.js)
+
+```
+floor.buttonStates = {up: "", down: ""};
+```
