--- a/notes/notes_20210724.md
+++ b/notes/notes_20210724.md
@@ -52,6 +52,8 @@ Running the elevator sequence twice we get the following release patterns:
 
 Note that the pattern was different for each release, there evidently appears to be some kind of randomness introduced to the release pattern, whether that randomness is completely uniform or not is not known at this time as we don't have a sufficient sample.
 
+Going to the next challenge, the release pattern seems as though it may bias toward the lower floor, but we can start off building based upon an agnostic passenger per floor model.
+
 ### Fourth Floor Introduced
 
 Upon solving the first debug challenge, a fourth floor is introduced, leading to a discrete sampling problem.
@@ -80,6 +82,38 @@ Initially the code presented is the same as the first challenge. Adding addition
 ```
 
 The passenger release function appears to be similarly uniformly distributed, as such this is an expected outcome since the elevator maximum capacity is 4.
+
+#### Skipping Ahead to Further Challenges
+
+Observing the URL of the game, it ends with, "#challenge=2" - the "2" can be replaced to look forward into the game without having passed previous levels, allowing possibly for more generalizability.  Reviewing future levels:
+
+* 3: 23 people in 60 seconds, 5 floors
+* 4: 28 people in 60 seconds, 8 floors
+* 5: 100 people in 68 seconsds, 6 floors
+* 6: 40 people in 60 seconds, 4 floors, 2 elevators
+* 7: 100 people in 63 moves or less, 3 floors, 3 elevators
+* 8: 50 people, let no one wait more than 21 seconds, 6 floors
+* 9: 50 people, no one waits more than 20 seconds, 3 elevators, 7 floors
+* 10: 50 people, 70 seconds, 2 elevators, one of the elevators large
+* 11: 60 people, 19 seconds, 5 elevators, 9 floors
+* 12: 80 people, 17 seconds, 5 elevators, 9 floors
+* 13: 100 people, 15 seconds, 5 elevators, 9 floors
+* 14: 110 people, no one waits more than 15 seconds, 9 floors, 5 huge elevators
+* 15: 120 people, no one waits more than 14 seconds, 6 elevators, 8 floors
+* 16: 70 people, 80 seconds, 4 elevators with 2 huge ones, 12 floors
+* 17: 110 people, 80 seconds, 5 huge elevators, 21 floors
+* 18: 2675 people, 1800 seconds, no one waits >45 seconds, 8 elevators half huge, 21 floors
+* 19: perpetual demo
+
+There appear to be three main classes of problems:
+
+* A: P (people) / s (seconds) - P/s total throughput in a defined time
+* B: P in M(max) - total throughput in a defined number of moves
+* C: P with W(max) - total throughput with maximum wait time
+
+as well as:
+
+* D: includes both A and C
 
 ### Initial Read of Documentation
 
@@ -183,6 +217,12 @@ This presentation goes into:
 
 RAID may be analogous to multiple elevators. We may return to optimization under these conditions later in the Elevator Saga.
 
+##### Hypothesis of Disk Scheduling vs. Problem Classes
+
+* A: P/s - SCAN would likely help with total throughput, again assuming that floors are equally biased.
+* B: max moves - SCAN does seem like it would minimize movement vs. a greedy search
+* C: max waiting time - greedy search would potentially be better at reducing latency or, "wait time" on average, but as mentioned above, there may be stragglers and it may not optimize for one individual's maximum wait time, e.g. "farther away" requests starve for waiting time and the elevator hovers toward the middle.
+
 ### Psuedocode Draft Based Upon Basic Understanding of Standard Algorithms
 
 #### SCAN
@@ -270,3 +310,125 @@ There appears to be more functionality which can be found in the source code, no
 ```
 floor.buttonStates = {up: "", down: ""};
 ```
+
+#### Verifying Elements from Documentation which Can Be Derived from API
+
+Using, "/notes/crazyland.js" and copy and pasting elements from the documentation, the following variables were able to successfully print to console log given the demonstrated functions:
+
+```
+{
+    init: function(elevators, floors) {
+        var elevator = elevators[0]; // Let's use the first elevator
+
+        // Find maximum number of floors, topFloor - NUMFLOORS / TOPFLOOR (for general solution)
+        // by convention, start at floor 0 - BOTTOMFLOOR = 0
+        const BOTTOMFLOOR = 0;
+        // since index starts at 0, topfloor number will be top-1
+        const TOPFLOOR = floors.length - 1;
+
+        // Log top and bottom floor
+        console.log('the TOPFLOOR is: ',TOPFLOOR)
+        console.log('the BOTTOMFLOOR is: ',BOTTOMFLOOR)
+
+        // pop top floor into, "schedule" destinationQueue and start elevator immediately,
+        // don't wait for lower floor passenger
+        elevator.destinationQueue = [TOPFLOOR];
+        elevator.checkDestinationQueue();
+        console.log('destinationQueue: ',elevator.destinationQueue)
+
+        // Estimate passenger quantity, or at least if there are any passengers with loadFactor > 0
+        // elevatorloadfactor is a function
+        console.log('loadFactor: ',elevator.loadFactor())
+
+        // Check continuously, interior requests: getPressedFloors - interiorRequests - elevator.getPressedFloors()
+        //interior requests
+        elevator.on("floor_button_pressed", function(floorNum) {
+          // Maybe tell the elevator to go to that floor?
+          console.log('interiorRequests to floorNum: ',floorNum)
+        });
+
+
+        // Check exterior requests prior to each passing_floor with floor_button_pressed - exteriorRequests
+        floors.forEach(function(floor){
+            floor.on("up_button_pressed", function() {
+                console.log('exteriorRequest UP on floorNum: ', floor.floorNum());
+            });
+            floor.on("down_button_pressed", function() {
+                console.log('exteriorRequest DOWN on floorNum:', floor.floorNum());
+            });
+        });
+
+
+        // Check current floor numbers and direction for passing floors
+        // this gets triggered just previous to a floor being passed, in case stop is needed
+        elevator.on("passing_floor", function(floorNum, direction) {
+          // print the passing floor
+          console.log('passingFloorNum: ',floorNum)
+          // print the direction
+          console.log('direction: ',direction)
+          });
+
+
+        // combine interiorRequests and exteriorRequests into allRequests, order allRequests sequentially relative to current position and SCAN direction
+
+        // update "schedule" destinationQueue based upon allRequests and currentFloor
+        // schedule might need a helper function
+
+
+        // Move elevator toward topFloor -> goToFloor in topFloor direction
+        // move elevator might need some kind of helper function
+
+
+        // At each floorNum reached, if currentFloor === one_of_the( allRequests ), reload passengers
+        // skip floors not currently on requests / schedule
+
+        // NOTE --- do not use, "stop" - this is used for a different purpose, not for stopping at floors
+
+        // Once reached TopFloor, insert bottom floor [0] into scheduling queue - destinationQueue.
+
+        // repeat the above pattern in reverse until reaching BOTTOMFLOOR
+
+        // Repeat pattern back to TOPFLOOR
+
+    },
+
+    update: function(dt, elevators, floors) {
+        // We normally don't need to do anything here
+    }
+}
+
+```
+
+#### Building the Algorithm
+
+Based upon the above exercise, we know that the following variables can be easily extracted:
+
+* BOTTOMFLOOR
+* TOPFLOOR
+* destinationQueue - queue of next destinations in array
+* loadFactor - decimal digit showing how loaded elevator is
+* interiorRequests - cascading array of floorNum, requested internally
+* exteriorRequestUP - floornum for up button pressed, manually created function
+* exteriorRequestDOWN - floornum for down button pressed, manually created function
+* passingFloorNum - the floor about to pass next
+* direction - current direction
+
+From the above variables, we can attempt to write out a SCAN style algorithm, leveraging a central, neutral, "check if stop at next floor," function.  The concept behind, "stop at next floor," is something like this:
+
+![](/img/nextfloorstop_concept.png)
+
+Where essentially, flx, the next floor, independent of direction, should be able to be determined by the in-game variable, "passingFloorNum," since passingFloorNum activates slightly before flx is reached, independent of direction.
+
+Other decision making datapoints can be determined from request arrays both internal and external, as well as load status.
+
+All of this assumes a general overall SCAN-style, "sweeping," operation in which the elevator proceeds between the top and bottom floors.
+
+This of course is mimicking and optimization function presuming that all floors are equally biased in terms of numbers of people loading at each floor, and that passenger behavior will not change with up and down arrows, neither of which may be true.
+
+The overall, SCAN-style "sweeping," algorithm can be diagramed as follows:
+
+![](/img/overall_CSCAN_scheduler_diagram.png)
+
+Within that, a, "nextfloorstop ( direction, passingFlorNum, exteriorRequests, interiorRequests, load )" function may be built which follows roughly the below decision diagram:
+
+![](/img/nextfloorstop_function_diagram.png)
