--- a/notes/notes_20210724.md
+++ b/notes/notes_20210724.md
@@ -432,3 +432,29 @@ The overall, SCAN-style "sweeping," algorithm can be diagramed as follows:
 Within that, a, "nextfloorstop ( direction, passingFlorNum, exteriorRequests, interiorRequests, load )" function may be built which follows roughly the below decision diagram:
 
 ![](/img/nextfloorstop_function_diagram.png)
+
+The, "nextflorstop()" function may serve as a sort of centerpoint in the philosophy of buidling a SCAN-based elevator scheduler. Overall, since the focus is on looping the elevator(s) back and fourth, we might think of the overall program itself happening as a for loop which checks for outside button presses on a continuous basis, almost like a microcontroller:
+
+![](/img/microcontroller_model_concept.png)
+
+Within this paradigm, there is a, "requests" transformation which must happen to translate external requests which might happen on a regular basis to a dictionary type object, which would be much more easily referenceable.
+
+In short, the dictionary object would work as follows:
+
+* Create an entry for each floor, for either, "Up Requests," "Down Requests," or "Interior Requests."
+* For any floor requested, turn the dictionary entry for that floor to 1.
+* Once we hit a floor and after opening the door and starting again, the entry for that dictionary item goes back to 0.
+
+Dictionary entries do not re-route the elevator, they just tell the elevator, from a binary perspective whether to open or not:
+
+![](/img/requeststransformer_diagram.png)
+
+The, "check if reached" function checks the output of the, "requests transformer," and looks at whether a given floor has been reached, given the in-game input "passingFloorNum" - if "passingFloorNum" equals any of the dict object requests, then add that value to the scheduler previous to the either, "TOPLOOR," or, "BOTTOMFLOOR."
+
+After the elevator starts again, the value gets removed in favor of TOPFLOOR or BOTTOMFLOOR.
+
+![](/img/checkifreached_function_diagram.png)
+
+Finally, there should be a, "move elevator," function which actually commands the elevator itself to move, given the decision making in the above functions.
+
+![](/img/moveelevator_function_diagram.png)
