--- a/notes/notes_20210724.md
+++ b/notes/notes_20210724.md
@@ -399,7 +399,7 @@ Using, "/notes/crazyland.js" and copy and pasting elements from the documentatio
 
 ```
 
-#### Building the Algorithm
+#### Sketching Out the Algorithm
 
 Based upon the above exercise, we know that the following variables can be easily extracted:
 
@@ -458,3 +458,8 @@ After the elevator starts again, the value gets removed in favor of TOPFLOOR or 
 Finally, there should be a, "move elevator," function which actually commands the elevator itself to move, given the decision making in the above functions.
 
 ![](/img/moveelevator_function_diagram.png)
+
+#### Building the Algorithm in Code
+
+* The first code we have to test out accessing variables and showing them on the console is [crazyland.js](/notes/crazyland.js).
+* Secondly, generating a function that simply moves the elevator to the top and then bottom floor via switching out the scheduler variable, destinationQueue, at [movingelevator.js](/notes/movingelevator.js)
