--- a/notes/notes_20210724.md
+++ b/notes/notes_20210724.md
@@ -461,7 +461,7 @@ Finally, there should be a, "move elevator," function which actually commands th
 
 #### Building the Algorithm in Code
 
-* The first code we have to test out accessing variables and showing them on the console is [crazyland.js](/notes/crazyland.js).
-* Secondly, generating a function that simply moves the elevator to the top and then bottom floor via switching out the scheduler variable, destinationQueue, at [movingelevator.js](/notes/movingelevator.js)
-
-#### 
+* The first code we have to test out accessing variables and showing them on the console is [crazyland.js](/notes/crazyland.md).
+* Secondly, generating a function that simply moves the elevator to the top and then bottom floor via switching out the scheduler variable, destinationQueue, at [movingelevator.js](/notes/movingelevator.md)
+* Thirdly, finding out that the way to move the elevator up and down is actually through the idle function, not the update function, as discussed in [](/notes/mainloop.md)
+* Fourthly, finding out that we get reference erros when trying to pass the variable, "floorNumPass" within our movingelevator.js function, that it's not as simple as creating a variable within the elevator function and going from there, discussed in [floornumpass.md](/notes/floornumpass.md).
