--- a/notes/notes_20210724.md
+++ b/notes/notes_20210724.md
@@ -465,3 +465,4 @@ Finally, there should be a, "move elevator," function which actually commands th
 * Secondly, generating a function that simply moves the elevator to the top and then bottom floor via switching out the scheduler variable, destinationQueue, at [movingelevator.js](/notes/movingelevator.md)
 * Thirdly, finding out that the way to move the elevator up and down is actually through the idle function, not the update function, as discussed in [](/notes/mainloop.md)
 * Fourthly, finding out that we get reference erros when trying to pass the variable, "floorNumPass" within our movingelevator.js function, that it's not as simple as creating a variable within the elevator function and going from there, discussed in [floornumpass.md](/notes/floornumpass.md).
+* Fifth, once the elevator is able to move up and down using, "currentFloorNow," within, [movingelevator.js](/notes/movingelevator.md) and two helper functions, additional stopping logic functions can be built using outside signals to tell the elevator to stop at various floors based upon the interior signal with [interiorsignalstop.js](/notes/interiorsignalstop.js) and [interiorsignalstop.md](/notes/interiorsignalstop.md).
