--- a/notes/notes_20210724.md
+++ b/notes/notes_20210724.md
@@ -466,3 +466,6 @@ Finally, there should be a, "move elevator," function which actually commands th
 * Thirdly, finding out that the way to move the elevator up and down is actually through the idle function, not the update function, as discussed in [](/notes/mainloop.md)
 * Fourthly, finding out that we get reference erros when trying to pass the variable, "floorNumPass" within our movingelevator.js function, that it's not as simple as creating a variable within the elevator function and going from there, discussed in [floornumpass.md](/notes/floornumpass.md).
 * Fifth, once the elevator is able to move up and down using, "currentFloorNow," within, [movingelevator.js](/notes/movingelevator.md) and two helper functions, additional stopping logic functions can be built using outside signals to tell the elevator to stop at various floors based upon the interior signal with [interiorsignalstop.js](/notes/interiorsignalstop.js) and [interiorsignalstop.md](/notes/interiorsignalstop.md).
+* Deciding how to stop and operate the elevator must be done in a dictionary object, rather than a list, to prevent erratic operation.  We discuss and establish functionality for this at: [interiorrequestdictionary.js](/notes/interiorrequestdictionary.js).
+* Checking whether a given floor had been reached and therefore setting a requestDict value to 0 is dependant not upon looking at which floor was passed, which happens **before** a signal to stop is removed, but rather it is dependant upon looking at an array of requests, and comparing that to a past array of requests, as established at [destinationQueueCheck.js](/notes/destinationQueueCheck.js)
+*
