Updating with 03 version release.

--- a/notes/notes_20210724.md
+++ b/notes/notes_20210724.md
@@ -469,3 +469,4 @@ Finally, there should be a, "move elevator," function which actually commands th
 * Deciding how to stop and operate the elevator must be done in a dictionary object, rather than a list, to prevent erratic operation.  We discuss and establish functionality for this at: [interiorrequestdictionary.js](/notes/interiorrequestdictionary.js).
 * Checking whether a given floor had been reached and therefore setting a requestDict value to 0 is dependant not upon looking at which floor was passed, which happens **before** a signal to stop is removed, but rather it is dependant upon looking at an array of requests, and comparing that to a past array of requests, as established at [destinationQueueCheck.js](/notes/destinationQueueCheck.js)
 * An overall architecture, which includes the over-arching, "movingelevator.js" function and several helper files is included at [movingelevatorwithhelpers.js](/notes/movingelevatorwithhelpers.js)
+* Finally, an architecture which responds only to interior requests was created at [movingelevatorwithhelpers.md](/notes/movingelevatorwithhelpers.md) and javascript file [movingelevatorwithhelpers.js](/notes/movingelevatorwithhelpers.js).  This was able to pass level 2, but there are inefficiencies with not responding to exterior requests.
